# acqua

./: .gitignore  .travis.yml  README.md  acqua-IR  acqua-ir  acqua-run  acqua-run-map  acqua.cabal  failing.l1  fibo.aqa  fibo.l1  graphs.html  l1-ast  l1-run  l1-typecheck  lcs.l1  quicksort.l1  todo.txt  ul1-ast
samples/: double_if.l1  fat.l1  fibo.l1  let_fn.l1  simple_apply.l1  simple_if.l1
sets/fibo/: .l1  02_fibo.l1  02_fibo.l1.out  03_fibo.l1  03_fibo.l1.out  04_fibo.l1  04_fibo.l1.out  05_fibo.l1  05_fibo.l1.out  06_fibo.l1.out  07_fibo.l1  07_fibo.l1.out  08_fibo.l1  08_fibo.l1.out  09_fibo.l1  09_fibo.l1.out  10_fibo.l1  10_fibo.l1.out  10_fibo.l1.out.10pus  10_fibo.l1.out.1pus  10_fibo.l1.out.2pus  10_fibo.l1.out.3pus  10_fibo.l1.out.5pus  10_fibo.l1.out.6pus  10_fibo.l1.out.7pus  10_fibo.l1.out.8pus  10_fibo.l1.out.9pus  cmd_pus.sh  cmd_steps.sh
spec/: acqua_run.hs  acqua_run_complete.hs  acqua_run_fn.hs  acqua_run_hierarchical_crossbar.hs  acqua_run_map.hs  acqua_run_return_42.hs  acqua_run_with_param.hs  fibo.l1  fromL1_spec.hs  l1_typecheck.hs  parser_spec.hs
spec/fixtures/: app.l1  app_fn_let.l1  curry.l1  fat.l1  freevar.l1  let_fn.l1  multiparam.l1  newton-raphson.l1  simple_if.l1
spec/fixtures/disabled/: curry_3.l1
spec/fixtures/map/: fibo.l1  head.l1
spec/fixtures/need_x/: fat.l1  quicksort.l1
spec/fixtures/return_42/: concat.l1  double_head.l1  fibo.l1  head.l1  last.l1  lcs.l1  length.l1  let_command.l1  let_curry.l1  let_curry_3.l1  mergesort.l1  mod.l1  newton-raphson.l1  slice.l1  use_cache.l1
spec/fixtures/run/: app_fn.l1  double_if.l1  filter.l1  list_with_var.l1  map.l1  simple_apply.l1  tail.l1
src/: AST.hs  IR.hs  L1c.hs  Logger.hs  Main.hs  Run.hs  acqua-ir.hs  acqua-run-map.hs  acqua-run.hs  l1-ast.hs  l1-run.hs  l1-typeCheck.hs  ul1-ast.hs
src/AcquaIR/: BasicBlockDependencyTable.hs  Colors.hs  Compile.hs  CompileStatement.hs  CompileStates.hs  Language.hs
src/AcquaIR/Transformations/: AddWaits.hs  EliminateRedundantVars.hs
src/Compiler/: Compile.hs  Compile.hs.orig  CompileStatement.hs  CompileStates.hs
src/Compiler/Transformations/: AddEnvNews.hs  AddFreeVariables.hs  AddWaits.hs  EliminateRedundantVars.hs  FillFreeVars.hs
src/L1/: Grammar.y  Language.hs  Reduce.hs  Tokens.x  Type.hs
src/Simulator/: Acqua.hs  AcquaState.hs  CallRecord.hs  CallRecordSeg.hs  Closure.hs  Environment.hs  GarbageCollector.hs  Heap.hs  Interconnection.hs  Job.hs  List.hs  ProcessingUnit.hs  ProcessingUnitId.hs  Queue.hs  ReturnAddrVar.hs  Rules.hs  Run.hs  Stats.hs  Value.hs
src/Simulator/Rules/: All.hs  Assign.hs  AssignJob.hs  Base.hs  Call.hs  CallL.hs  Concat.hs  Delete.hs  EndCopy.hs  EndReqCopy.hs  EnvAdd.hs  EnvNew.hs  Filter.hs  GetCallRecordCount.hs  GetCallRecordMissing.hs  GetCallRecordParam.hs  GetClosureCount.hs  GetClosureMissing.hs  GetClosureParam.hs  GetNPU.hs  Goto.hs  Head.hs  If.hs  InnerCopy.hs  Last.hs  Length.hs  ListSet.hs  ListSetN.hs  Map.hs  NewCallRecord.hs  NewClosure.hs  NewEnv.hs  NewList.hs  Op.hs  OuterCopy.hs  ReceiveResponse.hs  ReceiveUpdate.hs  ReceiveUpdateClos.hs  ReceiveUpdateList.hs  ReceiveUpdateMetaClos.hs  (+26 more)
src/Simulator/Rules/CallRecord/: GetCallRecordCount.hs  GetCallRecordMissing.hs  GetCallRecordParam.hs  NewCallRecord.hs  SetCallRecordCount.hs  SetCallRecordCountI.hs  SetCallRecordFn.hs  SetCallRecordMissing.hs  SetCallRecordMissingI.hs  SetCallRecordParam.hs  SetCallRecordParamI.hs  SetCallRecordParamIL.hs
src/Simulator/Rules/List/: Concat.hs  Concat3.hs  Filter.hs  Head.hs  Last.hs  Length.hs  ListGet.hs  ListSet.hs  ListSetN.hs  ListSetNN.hs  Map.hs  NewList.hs  NewListN.hs  SMap.hs  Slice.hs  Tail.hs
src/Simulator/Rules/Messages/: EndCopy.hs  EndReqCopy.hs  ReqJobCallRecord.hs  ReqPointer.hs  Response.hs  SendMsg.hs  (+7 more)
src/UL1/: FromL1.hs  Language.hs  Type.hs
