name:                acqua
version:             0.1.0.0
synopsis:            Acqua abstract machine
homepage:            https://bitbucket.org/fotanus/acqua
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Felipe Tanus
maintainer:          fotanus@inf.ufrgs.br
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable l1c
  main-is: L1c.hs
  hs-source-dirs: src
  build-depends: base ==4.*, array, pretty-show
  build-tools: alex, happy
  other-modules: L1.Tokens, L1.Grammar
  ghc-options: -Wall

--library
--  build-depends: base ==4.*, array, pretty-show
--  hs-source-dirs: src
--  other-modules: L1.Tokens, L1.Grammar
--  exposed-modules: L1.Language

test-suite parser-spec
  type: exitcode-stdio-1.0
  hs-source-dirs: spec, src
  other-modules: L1.Tokens, L1.Grammar
  main-is: parser_spec.hs
  build-depends: base == 4.6.*, hspec, array
