name:                acqua
version:             0.1.0.0
synopsis:            Acqua abstract machine
homepage:            https://bitbucket.org/fotanus/acqua
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Felipe Tanus
maintainer:          fotanus@inf.ufrgs.br
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable l1-ast
  main-is: l1-ast.hs
  hs-source-dirs: src
  build-depends: base ==4.*, array, containers, pretty-show, mtl
  build-tools: alex, happy
  other-modules: L1.Tokens, L1.Grammar
  ghc-options: -Wall

executable acqua-ir
  main-is: acqua-ir.hs
  hs-source-dirs: src
  build-depends: base ==4.*, array, containers, pretty-show, mtl
  build-tools: alex, happy
  other-modules: L1.Tokens, L1.Grammar
  ghc-options: -Wall

executable acqua-run
  main-is: acqua-run.hs
  hs-source-dirs: src
  build-depends: base ==4.*, array, containers, pretty-show, mtl, containers
  build-tools: alex, happy
  other-modules: L1.Tokens, L1.Grammar
  ghc-options: -Wall


--library
--  build-depends: base ==4.*, array, pretty-show
--  hs-source-dirs: src
--  other-modules: L1.Tokens, L1.Grammar
--  exposed-modules: L1.Language

test-suite parser-spec
  type: exitcode-stdio-1.0
  hs-source-dirs: spec, src
  other-modules: L1.Tokens, L1.Grammar
  main-is: parser_spec.hs
  build-depends: base == 4.*, hspec, array

test-suite acqua-run-spec
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: acqua_run.hs
  build-depends: base == 4.*, hspec, array, directory, process, regex-posix, text, split
